--- a/background/api/pom.xml
+++ b/background/api/pom.xml
@@ -20,6 +20,16 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
             <groupId>chao.chis</groupId>
             <artifactId>core</artifactId>
             <version>${CCClog.version}</version>
