--- a/background/pom.xml
+++ b/background/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>core</module>
         <module>api</module>
+        <module>common</module>
     </modules>
 
     <properties>
