--- a/front/admin/package.json
+++ b/front/admin/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-ui": "^2.10.0",
+    "vant": "^2.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
