--- a/front/admin/package.json
+++ b/front/admin/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "element-ui": "^2.10.0",
+    "sass": "^1.22.10",
+    "scss": "^0.2.4",
     "vant": "^2.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
