--- a/front/admin/package.json
+++ b/front/admin/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "^2.10.0",
+    "eslint": "^6.4.0",
     "sass": "^1.22.10",
     "scss": "^0.2.4",
     "vant": "^2.1.1",
